--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      defer
+      src="https://track.jasony.org/script.js"
+      data-website-id="152cddaf-c686-4657-87b2-ae1a368b72e1"
+    ></script>
     <title>MMMF</title>
   </head>
   <body>
